# sctree-public

./: .gitignore  main.py  main_sweep.py  setup.cfg
src/sctree/models/: losses.py  networks.py  sctree.py
src/sctree/module/: treemodule.py
src/sctree/utils/: eval_utils.py  model_utils.py  training_utils.py  utils.py
