[metadata]
name = sctree
version = 0.0.1
platform = any
url = https://github.com/mvandenhi/sc-treevae
description = Clustering method for scRNA-seq data.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.8
install_requires =
    scvi-tools
    scanpy
    wandb

[options.packages.find]
where=src



